# DiscordYTStreamBot

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: tests.yml
apps/discordbot/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  requirements-production.txt  requirements.txt
apps/discordbot/src/: conftest.py  main.py  settings.py
apps/discordbot/src/api/: api.py  api_backend_wrapper.py  decorators.py
apps/discordbot/src/api/routers/: admin.py  debug.py  misc.py  music_controls.py  voice.py  websockets.py
apps/discordbot/src/api/websockets/: debug.py  hooks.py  music_controls.py  queue_controls.py  voice.py  ws_command.py  ws_hooks.py  ws_hooks_router.py  ws_manager.py  ws_response.py  ws_router.py
apps/discordbot/src/api/websockets/commands/: debug.py  music_controls.py  queue_controls.py  voice.py
apps/discordbot/src/bot/: bot.py  bot_debug.py  bot_generic.py  bot_hooks.py  bot_objects.py  bot_voice.py  decorators.py  discord_service.py  models.py
apps/discordbot/src/bot/bot_voice/: __init__.py  audio_mixin.py  bot_voice.py  connection_mixin.py  playback_handler.py  voice_control_mixin.py  voice_events_mixin.py
apps/discordbot/src/bot/cogs/: generic.py  voice.py
apps/discordbot/src/tests/: backend_factories.py  bot_factories.py  bot_utils.py  conftest.py  test_admin.py  test_backend_wrapper.py  test_websockets.py  utils.py
apps/discordbot/src/tests/bot/: test_bot.py
apps/discordbot/src/tests/websockets/: test_ws.py  test_ws_hooks.py  test_ws_music_control.py  test_ws_queue_control.py
apps/discordbot/src/utils/: api_backend_wrapper.py  event_handler.py  singleton.py
apps/discordbot/src/ws/: __init__.py  hooks.py  ws_command.py  ws_commands_router.py  ws_hook.py  ws_hooks_router.py  ws_manager.py
apps/discordbot/src/ws/commands/: __init__.py  debug.py  mixins.py  music_controls.py  queue_controls.py  voice.py
apps/discordbot/tests/: bot_factories.py  conftest.py  mocks.py  test_backend_wrapper.py  test_case.py  test_utils.py  utils.py
apps/discordbot/tests/bot/: bot_utils.py  factories.py  test_bot.py
apps/discordbot/tests/bot/cogs/: test_case.py  test_voice.py
apps/discordbot/tests/utils/: factories.py  mocks.py  test_backend_wrapper.py
apps/discordbot/tests/websockets/: test_ws_hooks.py  test_ws_music_control.py
apps/discordbot/tests/ws/: test_case.py  test_ws.py  test_ws_hooks.py
apps/discordbot/tests/ws/commands/: test_ws_music_control.py  test_ws_queue_control.py
apps/dj-backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  __init__.py  pyproject.toml  requirements-production.txt  requirements.txt
apps/dj-backend/src/backend/: mixins.py  permissions.py  settings.py  settings_schema.py  test_utils.py  urls.py
apps/dj-backend/src/discord/: admin.py  api.py  models.py  serializers.py  urls.py  views.py
apps/dj-backend/src/discord/migrations/: 0001_initial.py  0002_discordguild_guildqueue_guildqueueitem.py  0003_alter_discordguild_name.py  0004_alter_guildqueueitem_added_by.py  0005_remove_guildqueueitem_queue_and_more.py
apps/dj-backend/src/discord/tests/: test_models.py  test_views.py
apps/dj-backend/src/youtube/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/dj-backend/src/youtube/migrations/: 0001_initial.py  0002_alter_youtubeplaylist_options_and_more.py  0003_alter_youtubevideo_source_url_and_more.py
apps/dj-backend/src/youtube/tests/: test_models.py  test_services.py  test_views.py
apps/nginx/: nginx.dev.conf  nginx.prod.conf
apps/react-frontend/: .env.development  .env.production  .gitignore  Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
apps/react-frontend/app/: app.css  middleware.ts  root.tsx  routes.ts
apps/react-frontend/app/api/: backend-types.ts  backend-wrapper.ts
apps/react-frontend/app/api/discord/: discord-types.ts  discord-wrapper.ts
apps/react-frontend/app/api/youtube/: youtube-types.ts  youtube-wrapper.ts
apps/react-frontend/app/components/: MemberAvatar.tsx  Musicbar.tsx  MusicbarArtistInfo.tsx  MusicbarSongControls.tsx  MusicbarSongProgressBar.tsx  MusicbarVolumeControl.tsx  Navbar.tsx  SideBar.tsx  SongContainer.tsx  SongContainerCard.tsx  SongContextMenu.tsx  SongDropdown.tsx  SongQueue.tsx  SongQueueClosed.tsx  SongSearchbar.tsx  SongSearchbarCard.tsx  VCMembersContainer.tsx
apps/react-frontend/app/components/musicbar/: Musicbar.tsx  MusicbarArtistInfo.tsx  MusicbarSongControls.tsx  MusicbarSongProgressBar.tsx  MusicbarTags.tsx  MusicbarVolumeControl.tsx
apps/react-frontend/app/components/playlistsidebar/: PlaylistSidebar.tsx  PlaylistSidebarCurrentSong.tsx  PlaylistSidebarSortableItem.tsx
apps/react-frontend/app/components/utilities/: HorizontalAccordion.tsx  Icons.tsx  misc.ts
apps/react-frontend/app/contexts/: BotContext.tsx  PlaybackContext.tsx  PlaybackQueueContext.tsx  PlaybackStatusContext.tsx  PlaybackVideoContext.tsx  PlaylistContext.tsx  SocketContext.tsx  UserContext.tsx
apps/react-frontend/app/hooks/: useCurrentPlayback.ts  useSocketEvent.ts
apps/react-frontend/app/routes/: AuthCallback.tsx  NotImplemented.tsx  home.tsx  layout.tsx  login.tsx  search.tsx  settings.tsx
apps/react-frontend/app/utils/: misc.ts
