# [project]
# name = "backend"
# version = "0.1.0"
# dependencies = [
#     "django",
#     "djangorestframework",
#     "psycopg2-binary"
# ]


# [tool.setuptools.packages.find]
# where = [
#     "apps/dj_backend/src",
#     # "apps/bot/src",
# ]

# ==========================================================================================
# PYTEST
# ==========================================================================================
[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--order-scope=class"



# ==========================================================================================
# BLACK
# ==========================================================================================
[tool.black]
line-length = 130
target-version = ['py310']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(\.venv|venv|build|dist|__pycache__)/ |
  \.git
)
'''




# ==========================================================================================
# PYLINT
# ==========================================================================================
# https://gist.github.com/chapmanjacobd/481ef1ccefcda6750e76bad4dd19ebd2
[tool.pylint.main]
init-hook='import sys; sys.path.append("src")'
fail-under = 8.0
persistent = true



[tool.pylint.basic]
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
bad-names = ["foo", "bar", "baz", "toto", "tutu", "tata"]
class-attribute-naming-style = "any"
class-const-naming-style = "UPPER_CASE"
class-naming-style = "PascalCase"
const-naming-style = "UPPER_CASE"



[tool.pylint.design]
max-args = 8                # Max function arguments
max-locals = 20             # Max local variables
max-returns = 6             # Max return statements per function
max-branches = 12           # Max if/else branches
max-statements = 100        # Max statements per function
max-nested-blocks = 5       # Max nesting
min-public-methods = 0      # if you want to enforce interface



[tool.pylint.typecheck]
ignored-classes = ["SQLAlchemy", "db.Model"]  # avoid false positives on ORM models



[tool.pylint.messages_control]
disable = [
    # "import-outside-toplevel",
    # "missing-module-docstring",
    # "import-error"
]



[tool.pylint.format]
ignore-long-lines = "^\\s*(# )|^\\s*(\\w*\\s*=\\s*)?(\\\"|\\').*(\\\"|\\'),?\\s*$"
indent-after-paren = 4
indent-string = "    "
max-line-length = 130
max-module-lines = 1500


[tool.pylint.documentation]
docstring-min-length = 10


[tool.pylint.imports]
known-standard-library = ["os","sys","re","math"]
known-third-party = ["requests"]
import-graph = true


[tool.pylint.spelling]
max-spelling-suggestions = 4
spelling-ignore-comment-directives = "fmt: on,fmt: off,noqa:,noqa,nosec,isort:skip,mypy:"
